--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,22 +6,22 @@
 }
 
 a {
-  padding: 5px;
-  padding-right: 19px;
+  padding: 0.5%;
+  padding-right: 5%;
   text-decoration: none;
   color: rgb(3, 3, 29);
   font-family: Verdana;
-  font-size: 12px;
+  font-size: 80%;
 }
 
 #cart {
   margin-left: auto;
-  margin-bottom: -5px;
-  margin-top: -5px;
+  margin-right: -3%;
+  margin-bottom: -0.5%;
+  margin-top: -0.5%;
 }
-
 .cart-icon {
-  font-size: 20px;
+  font-size: 200%;
 }
 
 a:hover {
