added link to product page for shop now button in header

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -38,3 +38,8 @@
   width: auto;
   height: auto;
 }
+
+.header-content button:hover {
+  background-color: rgb(15, 15, 89);
+  color: rgb(240, 245, 247);
+}
