--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -58,22 +58,84 @@
   background-color: #f4f3f2;
 }
 
+.featured-collection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .featured-collection h2 {
   font-size: 300%;
+  margin: 7%;
+  margin-bottom: 1%;
+}
+
+.featured-collection p {
+  font-size: 80%;
   margin: 1%;
   margin-bottom: 1%;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+  margin: 2%;
 }
 
 .product-cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 10px;
+  display: flex;
+  flex-direction: row;
   justify-items: center;
   align-items: center;
   text-align: center;
+  gap: 10px;
   margin-top: 5%;
+}
+
+.product-cards img {
+  border: 2px solid rgb(216, 217, 217);
+  border-radius: 10%;
+  padding: 10%;
+}
+
+.product-cards img:hover {
+  border-color: rgb(15, 15, 89);
+}
+
+.featured-collection-btn {
+  font-weight: bold;
+  color: rgb(240, 245, 247);
+  border-radius: 8px;
+  border-color: transparent;
+  background: rgb(15, 15, 89);
+  padding: 1%;
+  white-space: nowrap;
+  width: auto;
+  height: auto;
+  margin-top: 10px;
+}
+
+.featured-collection-btn:hover {
+  background-color: rgb(240, 245, 247);
+  color: rgb(15, 15, 89);
+  cursor: pointer;
+}
+
+.footer-content {
+  background-color: rgb(15, 15, 89);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1%;
+}
+
+.footer-content h3 {
+  color: rgb(240, 245, 247);
+}
+
+.footer-content h3:hover {
+}
+
+.footer-content #copyright {
+  font-size: 70%;
+  color: rgb(160, 165, 167);
 }
