--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,9 @@
+/* style.css */
+
+* {
+  overflow-x: hidden !important;
+}
+
 .header {
   background-image: linear-gradient(to right, lightblue, darkblue);
   color: #f4f3f2;
@@ -13,9 +19,8 @@
 }
 
 #welcome-text {
-  border: 2px solid rgb(194, 206, 246);
+  border: 1px solid rgb(194, 206, 246);
   border-radius: 30px;
-  border-width: 1px;
   padding: 5px;
   font-size: 10px;
 }
@@ -23,12 +28,10 @@
 .header-content h1 {
   font-size: 350%;
   margin: 1%;
-  margin-bottom: 1%;
 }
 
-.header-content .header-content-btns {
+.header-content-btns {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 15%;
@@ -36,22 +39,18 @@
 }
 
 .header-content button {
-  display: flex;
-  flex-direction: row;
   font-weight: bold;
   color: rgb(15, 15, 89);
   border-radius: 8px;
   border-color: transparent;
-  background: rgb(240, 245, 247);
+  background: #f4f3f2;
   padding: 10%;
   white-space: nowrap;
-  width: auto;
-  height: auto;
 }
 
 .header-content button:hover {
   background-color: rgb(15, 15, 89);
-  color: rgb(240, 245, 247);
+  color: #f4f3f2;
 }
 
 .section {
@@ -67,26 +66,26 @@
 }
 
 .featured-collection h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   font-size: 300%;
   margin: 7%;
-  margin-bottom: 1%;
+  margin: 2%;
 }
 
 .featured-collection p {
   font-size: 80%;
-  margin: 1%;
-  margin-bottom: 1%;
   margin: 2%;
 }
 
 .product-cards {
   display: flex;
-  flex-direction: row;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
-  text-align: center;
-  gap: 10px;
-  margin-top: 5%;
+  gap: 35px;
+  margin-top: 2%;
 }
 
 .product-cards img {
@@ -101,19 +100,19 @@
 
 .featured-collection-btn {
   font-weight: bold;
-  color: rgb(240, 245, 247);
+  color: #f4f3f2;
   border-radius: 8px;
   border-color: transparent;
   background: rgb(15, 15, 89);
   padding: 1%;
-  white-space: nowrap;
-  width: auto;
-  height: auto;
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .featured-collection-btn:hover {
-  background-color: rgb(240, 245, 247);
+  background-color: #f4f3f2;
   color: rgb(15, 15, 89);
   cursor: pointer;
 }
@@ -121,7 +120,6 @@
 .footer-content {
   background-color: rgb(15, 15, 89);
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -129,13 +127,19 @@
 }
 
 .footer-content h3 {
-  color: rgb(240, 245, 247);
+  color: #f4f3f2;
 }
 
-.footer-content h3:hover {
+.footer-content h3 a {
+  color: #f4f3f2;
+  text-decoration: none;
 }
 
-.footer-content #copyright {
+.footer-content h3 a:hover {
+  text-decoration: underline;
+}
+
+#copyright {
   font-size: 70%;
   color: rgb(160, 165, 167);
 }
